--- a/1-classesProject/index.html
+++ b/1-classesProject/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <canvas></canvas>
-  <script src='./scripts.js'></script>
+  <script src="./scripts.js"></script>
 </body>
 </html>
